--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Nahankamu app</string>
     <string name="title"><font size="30">阪神算ジェネレータ</font></string>
     <string name="swichan"><font size="20">加算</font></string>
-    <string name="btn">加算</string>
-    <string name="answer"><font size="31">Empty</font></string>
-    <string name="count"><font size="15">Empty</font></string>
+    <string name="btn">な阪関無</string>
+    <string name="answer"><font size="31">null</font></string>
+    <string name="count"><font size="15">null</font></string>
     <string name="coppy">コピー</string>
 </resources>
