--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="btn">な阪関無</string>
     <string name="answer"><font size="31">null</font></string>
     <string name="count"><font size="15">null</font></string>
-    <string name="coppy">コピー</string>
+    <string name="copy">コピー</string>
 </resources>
